--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-dnl @(#) $Header: /tcpdump/master/libpcap/configure.in,v 1.138.2.7 2008-02-04 21:10:36 guy Exp $ (LBL)
+dnl @(#) $Header: /tcpdump/master/libpcap/configure.in,v 1.138.2.8 2008-03-13 18:16:37 guy Exp $ (LBL)
 dnl
 dnl Copyright (c) 1994, 1995, 1996, 1997
 dnl	The Regents of the University of California.  All rights reserved.
@@ -6,7 +6,7 @@ dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
 
-AC_REVISION($Revision: 1.138.2.7 $)
+AC_REVISION($Revision: 1.138.2.8 $)
 AC_PREREQ(2.50)
 AC_INIT(pcap.c)
 
@@ -252,7 +252,25 @@ elif test -r /usr/include/odmi.h ; then
 	#
 	V_PCAP=bpf
 elif test -r /usr/include/sys/dlpi.h ; then
-	V_PCAP=dlpi
+	#
+	# Checks to see if Solaris has the public libdlpi(3LIB) library.
+	# Note: The existence of /usr/include/libdlpi.h does not mean it is the
+	# public libdlpi(3LIB) version. Before libdlpi was made public, a 
+	# private version also existed, which did not have the same APIs. 
+	# Due to a gcc bug, the default search path for 32-bit libraries does
+	# not include /lib, we add it explicitly here.
+	# [http://bugs.opensolaris.org/view_bug.do?bug_id=6619485]. 
+	# Also, due to the bug above applications that link to libpcap with
+	# libdlpi will have to add "-L/lib" option to "configure".
+	#
+	saved_ldflags=$LDFLAGS
+	LDFLAGS="$LIBS -L/lib"
+	AC_CHECK_LIB(dlpi, dlpi_walk,
+		LIBS="-ldlpi $LIBS"
+		V_PCAP=libdlpi
+		AC_DEFINE(HAVE_LIBDLPI,1,[if libdlpi exists]),
+		V_PCAP=dlpi)
+	LDFLAGS=$saved_ldflags
 elif test -c /dev/bpf0 ; then		# check again in case not readable
 	V_PCAP=bpf
 elif test -c /dev/enet ; then		# check again in case not readable
@@ -310,7 +328,8 @@ else
 		#
 		case "$V_PCAP" in
 
-		dlpi)
+		dlpi|libdlpi)
+			AC_CHECK_HEADERS(sys/bufmod.h sys/dlpi_ext.h)
 			#
 			# This might be Solaris 8 or later, with
 			# SIOCGLIFCONF, or it might be some other OS
@@ -334,6 +353,10 @@ else
 			else
 				V_FINDALLDEVS=gifc
 			fi
+			#
+			# Needed for common functions used by pcap-[dlpi,libdlpi].c
+			#
+		 	SSRC="dlpisubs.c"
 			;;
 
 		*)
@@ -373,7 +396,6 @@ AC_MSG_RESULT(${enable_yydebug-no})
 case "$V_PCAP" in
 
 dlpi)
-	AC_CHECK_HEADERS(sys/bufmod.h sys/dlpi_ext.h)
 	AC_MSG_CHECKING(for /dev/dlpi device)
 	if test -c /dev/dlpi ; then
 		AC_MSG_RESULT(yes)
@@ -389,6 +411,11 @@ dlpi)
 			AC_MSG_RESULT(no)
 		fi
 	fi
+	#
+	# This check is for Solaris with DLPI support for passive modes.
+	# See dlpi(7P) for more details.
+	#
+	AC_LBL_DL_PASSIVE_REQ_T
 	;;
 
 linux)
