From Kris Katterjohn: explicitly check for socklen_t, don't just assume glibc is the only Linux libc that defines socklen_t.

--- a/config.h.in
+++ b/config.h.in
@@ -152,6 +152,9 @@
 /* define if your compiler has __attribute__ */
 #undef HAVE___ATTRIBUTE__
 
+/* Is the socklen_t data type defined? */
+#undef HAVE_SOCKLEN_T
+
 /* IPv6 */
 #undef INET6
 
