--- a/Makefile.in
+++ b/Makefile.in
@@ -17,7 +17,7 @@
 #  WARRANTIES, INCLUDING, WITHOUT LIMITATION, THE IMPLIED WARRANTIES OF
 #  MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE.
 #
-# @(#) $Header: /tcpdump/master/libpcap/Makefile.in,v 1.108.2.7 2008-04-06 20:03:13 guy Exp $ (LBL)
+# @(#) $Header: /tcpdump/master/libpcap/Makefile.in,v 1.108.2.8 2008-04-06 20:18:33 guy Exp $ (LBL)
 
 #
 # Various configurable paths (remember to edit Makefile.in, not Makefile)
@@ -108,6 +108,7 @@ MAN3PCAP = pcap.3pcap \
 	pcap_create.3pcap \
 	pcap_datalink.3pcap \
 	pcap_datalink_name_to_val.3pcap \
+	pcap_datalink_val_to_name.3pcap \
 	pcap_dump.3pcap \
 	pcap_dump_close.3pcap \
 	pcap_dump_file.3pcap \
