This is probably the right way to run something once at startup time; it works on Tiger, and setting OnDemand to false appears to cause the job to be run over and over again on Leopard.

--- a/org.tcpdump.chmod_bpf.plist
+++ b/org.tcpdump.chmod_bpf.plist
@@ -4,8 +4,8 @@
 <dict>
 	<key>Label</key>
 	<string>org.tcpdump.chmod_bpf</string>
-	<key>OnDemand</key>
-	<false/>
+	<key>RunAtLoad</key>
+	<true/>
 	<key>Program</key>
 	<string>/usr/local/bin/chmod_bpf</string>
 	<key>ProgramArguments</key>
