--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-dnl @(#) $Header: /tcpdump/master/libpcap/configure.in,v 1.150 2008-04-05 04:56:47 guy Exp $ (LBL)
+dnl @(#) $Header: /tcpdump/master/libpcap/configure.in,v 1.151 2008-06-11 08:52:29 guy Exp $ (LBL)
 dnl
 dnl Copyright (c) 1994, 1995, 1996, 1997
 dnl	The Regents of the University of California.  All rights reserved.
@@ -6,7 +6,7 @@ dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
 
-AC_REVISION($Revision: 1.150 $)
+AC_REVISION($Revision: 1.151 $)
 AC_PREREQ(2.50)
 AC_INIT(pcap.c)
 
@@ -390,12 +390,20 @@ if test "x$have_socklen_t" = "xyes"; then
 fi
 AC_MSG_RESULT($have_socklen_t)
 
-AC_MSG_CHECKING(if --enable-ipv6 option is specified)
-AC_ARG_ENABLE(ipv6, [  --enable-ipv6           build IPv6-capable version])
-if test "$enable_ipv6" = "yes"; then
-	AC_DEFINE(INET6,1,[IPv6])
+AC_ARG_ENABLE(ipv6, [  --enable-ipv6           build IPv6-capable version @<:@default=yes, if available@:>@],
+    [],
+    [enable_ipv6=ifavailable])
+if test "$enable_ipv6" != "no"; then
+	AC_CHECK_FUNC(getaddrinfo,
+	    [
+		AC_DEFINE(INET6,1,[IPv6])
+	    ],
+	    [
+		if test "$enable_ipv6" != "ifavailable"; then
+			AC_MSG_FAILURE([--enable-ipv6 was given, but getaddrinfo isn't available])
+		fi
+	    ])
 fi
-AC_MSG_RESULT(${enable_ipv6-no})
 
 AC_MSG_CHECKING(whether to build optimizer debugging code)
 AC_ARG_ENABLE(optimizer-dbg, [  --enable-optimizer-dbg  build optimizer debugging code])
