Combine the capture-mechanism-dependent tests into one big case statement.

--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-dnl @(#) $Header: /tcpdump/master/libpcap/configure.in,v 1.155 2008-09-16 00:20:23 guy Exp $ (LBL)
+dnl @(#) $Header: /tcpdump/master/libpcap/configure.in,v 1.156 2008-09-16 07:10:31 guy Exp $ (LBL)
 dnl
 dnl Copyright (c) 1994, 1995, 1996, 1997
 dnl	The Regents of the University of California.  All rights reserved.
@@ -6,7 +6,7 @@ dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
 
-AC_REVISION($Revision: 1.155 $)
+AC_REVISION($Revision: 1.156 $)
 AC_PREREQ(2.50)
 AC_INIT(pcap.c)
 
@@ -264,6 +264,9 @@ else
 fi
 AC_MSG_RESULT($V_PCAP)
 
+#
+# Do capture-mechanism-dependent tests.
+#
 case "$V_PCAP" in
 dlpi)
 	#
@@ -285,9 +288,87 @@ dlpi)
 		AC_DEFINE(HAVE_LIBDLPI,1,[if libdlpi exists]),
 		V_PCAP=dlpi)
 	LDFLAGS=$saved_ldflags
+
+	#
+	# Checks whether <sys/dlpi.h> is usable, to catch weird SCO
+	# versions of DLPI.
+	#
+	AC_MSG_CHECKING(whether <sys/dlpi.h> is usable)
+	AC_CACHE_VAL(ac_cv_sys_dlpi_usable,
+		AC_TRY_COMPILE(
+		    [
+			#include <sys/types.h>
+			#include <sys/time.h>
+			#include <sys/dlpi.h>
+		    ],
+		    [int i = DL_PROMISC_PHYS;],
+		    ac_cv_sys_dlpi_usable=yes,
+		    ac_cv_sys_dlpi_usable=no))
+	AC_MSG_RESULT($ac_cv_sys_dlpi_usable)
+	if test $ac_cv_sys_dlpi_usable = no ; then
+		AC_MSG_ERROR(<sys/dlpi.h> is not usable on this system; it probably has a non-standard DLPI)
+	fi
+
+	#
+	# Check whether we have a /dev/dlpi device or have multiple devices.
+	#
+	AC_MSG_CHECKING(for /dev/dlpi device)
+	if test -c /dev/dlpi ; then
+		AC_MSG_RESULT(yes)
+		AC_DEFINE(HAVE_DEV_DLPI, 1, [define if you have a /dev/dlpi])
+	else
+		AC_MSG_RESULT(no)
+		dir="/dev/dlpi"
+		AC_MSG_CHECKING(for $dir directory)
+		if test -d $dir ; then
+			AC_MSG_RESULT(yes)
+			AC_DEFINE_UNQUOTED(PCAP_DEV_PREFIX, "$dir", [/dev/dlpi directory])
+		else
+			AC_MSG_RESULT(no)
+		fi
+	fi
+
+	#
+	# This check is for Solaris with DLPI support for passive modes.
+	# See dlpi(7P) for more details.
+	#
+	AC_LBL_DL_PASSIVE_REQ_T
+	;;
+
+linux)
+	AC_MSG_CHECKING(Linux kernel version)
+ 	if test "$cross_compiling" = yes; then
+ 		AC_CACHE_VAL(ac_cv_linux_vers,
+ 		    ac_cv_linux_vers=unknown)
+ 	else
+ 		AC_CACHE_VAL(ac_cv_linux_vers,
+ 		    ac_cv_linux_vers=`uname -r 2>&1 | \
+ 			sed -n -e '$s/.* //' -e '$s/\..*//p'`)
+ 	fi
+	AC_MSG_RESULT($ac_cv_linux_vers)
+ 	if test $ac_cv_linux_vers = unknown ; then
+ 		AC_MSG_ERROR(cannot determine linux version when cross-compiling)
+ 	fi
+	if test $ac_cv_linux_vers -lt 2 ; then
+		AC_MSG_ERROR(version 2 or higher required; see the INSTALL doc for more info)
+	fi
+	AC_CHECK_HEADERS(linux/wireless.h, [], [],
+	[
+#include <sys/socket.h>
+#include <net/if.h>
+#include <linux/types.h>
+	])
+	AC_CHECK_HEADERS()
+	AC_LBL_TPACKET_STATS
+	AC_LBL_LINUX_TPACKET_AUXDATA_TP_VLAN_TCI
 	;;
 
 bpf)
+	#
+	# Check whether we have the *BSD-style ioctls.
+	#
+	AC_CHECK_HEADERS(net/if_media.h)
+
 	AC_MSG_CHECKING(whether the system supports zerocopy BPF)
 	AC_TRY_COMPILE(
 	    [#include <sys/socket.h>
@@ -301,6 +382,19 @@ bpf)
 		[define if the system supports zerocopy BPF])
 	    ],
 	    AC_MSG_RESULT(no))
+	;;
+
+dag)
+	V_DEFS="$V_DEFS -DDAG_ONLY"
+	;;
+
+septel)
+	V_DEFS="$V_DEFS -DSEPTEL_ONLY"
+	;;
+
+null)
+	AC_MSG_WARN(cannot determine packet capture interface)
+	AC_MSG_WARN((see the INSTALL doc for more info))
 	;;
 esac
 
@@ -435,96 +529,6 @@ if test "$enable_yydebug" = "yes"; then
 	AC_DEFINE(YYDEBUG,1,[Enable parser debugging])
 fi
 AC_MSG_RESULT(${enable_yydebug-no})
-
-case "$V_PCAP" in
-
-dlpi)
-	AC_MSG_CHECKING(whether <sys/dlpi.h> is usable)
-	AC_CACHE_VAL(ac_cv_sys_dlpi_usable,
-		AC_TRY_COMPILE(
-		    [
-			#include <sys/types.h>
-			#include <sys/time.h>
-			#include <sys/dlpi.h>
-		    ],
-		    [int i = DL_PROMISC_PHYS;],
-		    ac_cv_sys_dlpi_usable=yes,
-		    ac_cv_sys_dlpi_usable=no))
-	AC_MSG_RESULT($ac_cv_sys_dlpi_usable)
-	if test $ac_cv_sys_dlpi_usable = no ; then
-		AC_MSG_ERROR(<sys/dlpi.h> is not usable on this system; it probably has a non-standard DLPI)
-	fi
-	AC_MSG_CHECKING(for /dev/dlpi device)
-	if test -c /dev/dlpi ; then
-		AC_MSG_RESULT(yes)
-		AC_DEFINE(HAVE_DEV_DLPI, 1, [define if you have a /dev/dlpi])
-	else
-		AC_MSG_RESULT(no)
-		dir="/dev/dlpi"
-		AC_MSG_CHECKING(for $dir directory)
-		if test -d $dir ; then
-			AC_MSG_RESULT(yes)
-			AC_DEFINE_UNQUOTED(PCAP_DEV_PREFIX, "$dir", [/dev/dlpi directory])
-		else
-			AC_MSG_RESULT(no)
-		fi
-	fi
-	#
-	# This check is for Solaris with DLPI support for passive modes.
-	# See dlpi(7P) for more details.
-	#
-	AC_LBL_DL_PASSIVE_REQ_T
-	;;
-
-linux)
-	AC_MSG_CHECKING(Linux kernel version)
- 	if test "$cross_compiling" = yes; then
- 		AC_CACHE_VAL(ac_cv_linux_vers,
- 		    ac_cv_linux_vers=unknown)
- 	else
- 		AC_CACHE_VAL(ac_cv_linux_vers,
- 		    ac_cv_linux_vers=`uname -r 2>&1 | \
- 			sed -n -e '$s/.* //' -e '$s/\..*//p'`)
- 	fi
-	AC_MSG_RESULT($ac_cv_linux_vers)
- 	if test $ac_cv_linux_vers = unknown ; then
- 		AC_MSG_ERROR(cannot determine linux version when cross-compiling)
- 	fi
-	if test $ac_cv_linux_vers -lt 2 ; then
-		AC_MSG_ERROR(version 2 or higher required; see the INSTALL doc for more info)
-	fi
-	AC_CHECK_HEADERS(linux/wireless.h, [], [],
-	[
-#include <sys/socket.h>
-#include <net/if.h>
-#include <linux/types.h>
-	])
-	AC_CHECK_HEADERS()
-	AC_LBL_TPACKET_STATS
-	AC_LBL_LINUX_TPACKET_AUXDATA_TP_VLAN_TCI
-	;;
-
-bpf)
-	#
-	# Check whether we have the *BSD-style ioctls.
-	#
-	AC_CHECK_HEADERS(net/if_media.h)
-	;;
-
-dag)
-	V_DEFS="$V_DEFS -DDAG_ONLY"
-	;;
-
-septel)
-	V_DEFS="$V_DEFS -DSEPTEL_ONLY"
-	;;
-
-null)
-	AC_MSG_WARN(cannot determine packet capture interface)
-	AC_MSG_WARN((see the INSTALL doc for more info))
-	;;
-
-esac
 
 AC_MSG_CHECKING(whether we have /proc/net/dev)
 if test -r /proc/net/dev ; then
